{
    "version": 1,
    "name": "GameInputs",
    "maps": [
        {
            "name": "GameCLI",
            "id": "7ffbeea3-09a9-4c6f-8f67-f525f77a9cc3",
            "actions": [
                {
                    "name": "ToggleConsole",
                    "type": "Button",
                    "id": "8bb20f86-c3c7-42b9-9c6a-436402519e1a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CopyLog",
                    "type": "Button",
                    "id": "32402d45-8f3d-4f18-a995-c10b5c154a47",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PreviousHistory",
                    "type": "Button",
                    "id": "707bbb0f-56e2-4aba-9052-708aaa00afdf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextHistory",
                    "type": "Button",
                    "id": "00ccbad9-482e-4f0e-9bfb-450d99c213f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6540f2b-5aa6-4fad-bf10-ecc4fa7e7658",
                    "path": "<Keyboard>/#(`)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Windows",
                    "id": "2e5e9f4e-d380-4a7c-8b1e-29981d2cd876",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CopyLog",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "a26f7fdc-0562-454b-8972-5284880881b2",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CopyLog",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "70019ff8-a75e-410d-8983-21c30caeb2d3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CopyLog",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b367738a-449c-47a2-abfc-543c9a21097d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousHistory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea4521be-dc86-4c63-a762-fc983c4bc38b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextHistory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}